--- a/config/storage.yml
+++ b/config/storage.yml
@@ -15,6 +15,13 @@ amazon:
   bucket: ENV.fetch("AWS_BUCKET_NAME")
   public: true
 
+  # amazon:
+  # service: S3
+  # access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  # secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  # region: eu-west-2 # London
+  # bucket: mdtstorage
+
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
