file uploads update

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,11 +9,12 @@ local:
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: <%= ENV.fetch("AWS_ACCESS_KEY_ID") %>
-  secret_access_key: <%= ENV.fetch("AWS_SECRET_ACCESS_KEY") %>
-  region: ENV.fetch("AWS_REGION")
-  bucket: ENV.fetch("AWS_BUCKET_NAME")
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
+  region: <%= ENV['AWS_REGION'] %>
+  bucket: <%= ENV['AWS_BUCKET_NAME'] %>
   public: true
+
 
   # amazon:
   # service: S3
